--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -1,5 +1,7 @@
 @use '../custom' as *;
 
+
+// DISPLAY 2
 .display-2{
     margin-bottom: 1rem;
     text-transform: capitalize;
@@ -12,10 +14,58 @@
 
     &--description{
         display:block;
-        font-size: 1.3rem;
+        font-size: 1rem;
         font-weight: 400;
         font-family: 'Manrope',sans-serif;
         text-transform: none;
-        margin-top: 1.2rem;  
+        margin-top: 1.2rem;
+
+@include
+media-breakpoint-up (lg){
+    font-size: 1.5rem!important;
+    display: inline-block;
+}
     }
+}
+
+
+// HEADLINE
+.heading-line::before{
+    content: '';
+    display:block;
+    width: 10rem;
+    height:0.1rem;
+    background-color: $primary;
+    margin: 0 auto;
+}
+
+
+.heading-line::after{
+    content: '';
+    display:block;
+    width: 2rem;
+    height:0.1rem;
+    padding-top: 0.5rem;
+    background-color: $primary;
+    margin: 0 auto;
+}
+
+// DISPLAY 3
+.display-3{
+    margin-bottom: 1rem;
+    text-transform: capitalize;
+    font-weight: 700;
+    font-family: 'Teko',sans-serif;
+}
+
+h2{
+    margin-bottom: 0.3rem;
+    text-transform: capitalize;
+    font-family: 'Manrope',sans-serif;
+}
+
+// BORDER RIGHT
+.border-right{
+    border-right: 0.2rem solid $gray-300;
+    height: 100%;
 }
